<package>
  <name>waypoint_rviz_plugin</name>
  <version>0.11.0</version>
  <description>
     Tool for add waypoint in rviz.
  </description>
  <maintainer email="datld@todo.todo">datld</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>

  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>rviz</run_depend>

  <build_depend>roscpp</build_depend>
	<run_depend>roscpp</run_depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
